--- a/humidity.html
+++ b/humidity.html
@@ -42,7 +42,7 @@
                 <hr>
                 <br>
                 <img src="./Resources/assets/images/Fig2.png" alt="maxtemp" class="img-fluid">
-                <p>As expected the weather becomes significantly warmer as one approachesthe equator (0 Deg. Latitude) More interestingly, however, is the fact that the sourthern hemisphere tends to be warmers this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
+                <p>The correlation between latitude and humidity was weak.
                 </p>
               </div>
               <div class="col-lg-4 customCon2 spaceBetween">
